--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "twitter-visualization",
   "version": "0.1.0",
+  "homepage": "http://erik-t-irgens.github.io/twitter-visualization",
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.8.3",
